Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-1730

[Python] Incorrect result from pyarrow.array when passing timestamp type

    XMLWordPrintableJSON

Details

    Description

      Even with the ARROW-1484 patch, we have:

      In [10]: pa.array([0], type=pa.timestamp('ns'))
      Out[10]: 
      <pyarrow.lib.TimestampArray object at 0x7f9145b27098>
      [
        Timestamp('1968-01-12 11:18:14.409378304')
      ]
      
      In [11]: pa.array([0], type='int64').cast(pa.timestamp('ns'))
      Out[11]: 
      <pyarrow.lib.TimestampArray object at 0x7f9145b27d18>
      [
        Timestamp('1970-01-01 00:00:00')
      ]
      

      Attachments

        Issue Links

          Activity

            People

              Licht-T Licht Takeuchi
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: